eZVlogin CHANGELOG
------------------

1.0 Release
-----------
+ initial import
+ Added user/login template for ezwebin
+ Added cache friendly user/edit view from trunk (doesn't need user id as parameter)
+ Set ModuleList setting to avoid automatic url_alias from using module url
+ Added optional cookie for user name (for your ajax / aggressive reverse proxy cache needs..)
+ Added optional cookie to indicate the user is plain member (logged in user that we can cache)
+ Added SSO support using http redirect loop
+ Added ezinfo.php, dist.sh and LICENSE files
+ fixed wrong class name

1.1 Release
-----------
+ added VCL example
+ clerify GET parameters and fasCGI setup (it should work on vhost setup)
+ Mark Cache User Group Mapping as (optional)
+ rawurldecode / rawurlencode user name and password to avoid SSO breaking on user name with whitespace
+ Set cache-control to avoid proxy caching login / logout ( shoudl probably have a setting for this )
+ Added eZ Publish 4.1 support (look for 'eZSession' class)